# conflict-monitoring-ntl

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
analysis/ideation/: index.html
analysis/satellites/: index.html
config/: admin-level-2.yaml  case-studies.yaml
data/shapes/admin_level/south_sudan/al_leiri/: al_leiri.dbf  al_leiri.shp  al_leiri.shx
data/shapes/admin_level/south_sudan/ayod/: ayod.dbf  ayod.shp  ayod.shx
data/shapes/china/: shangai.shp
data/shapes/countries/kenya/: kenya.dbf  kenya.shp  kenya.shx
data/shapes/india/: new_dehli.shp  new_dehli.shx
data/shapes/japan/: tokyo.dbf  tokyo.shp  tokyo.shx
data/shapes/lagos/: lagos.shp  lagos.shx
data/shapes/mexico/: mexico-city.shx
data/shapes/peri-urban/bangladesh/: rangpur.dbf  rangpur.shp
data/shapes/peri-urban/colombia/: villavicencio.shp
data/shapes/peri-urban/ghana/: kumasi.shp
data/shapes/peri-urban/india/: raipur.shp  raipur.shx
data/shapes/peri-urban/kenya/: nakuru.shp
data/shapes/peri-urban/philippines/: legazpi.shp  legazpi.shx
data/shapes/peri-urban/sri-lanka/: kuranegala.shp  kuranegala.shx
data/shapes/peri-urban/uzbekistan/: qarshi.shp
data/shapes/rural/central-african-republic/: kaga-bandoro.shp
data/shapes/rural/congo/: katana.shp  katana.shx
data/shapes/rural/ethiopia/: mekele.shp  mekele.shx
data/shapes/rural/myanmar/: sittwe.shp
data/shapes/rural/south-sudan/: bentiu.shp
data/shapes/rural/sudan/: sudan.shp
data/shapes/rural/yemen/: al-hudaydah.shp
data/shapes/sudan/: sudan.dbf  sudan.shx
data/shapes/urban/mexico/: mexico-city.shp
data/shapes/urban/pakistan/: karachi.shp  karachi.shx
data/shapes/urban/south-africa/: pretoria.shx
data/shapes/urban/usa/: los-angeles.shp
data/shapes/usa/: los-angeles.shx
data/shapes/zurich/: zurich.dbf  zurich.shx
docs/: index.md
docs/analysis/: api.md  ideation.md  quantification.md  satellites.md
docs/assets/d2/: api.d2
docs/notebooks/: cities.ipynb  example_comparison.ipynb  ghs_population.ipynb  site_selection.ipynb
docs/stylesheets/: extra.css
docs/system_design/: sdk.md
notebooks/: enmap.ipynb  exploration.ipynb  exploration_jan.ipynb  ghs_population.ipynb  landsat.ipynb  landsat_cover.ipynb  sdgsat.ipynb  stripes.ipynb
notebooks/data_analysis/: data_analysis.ipynb
notebooks/shapes/lagos/: lagos.dbf  lagos.shp  lagos.shx
notebooks/site_selection/: index.html
search/: search_index.json
src/conflict_monitoring_ntl/: case_studies.py  layers.py  satellites.py  transform.py  utils.py  viz.py
stylesheets/: extra.css
system_design/sdk/: index.html
(+39 files in other folders)
