[project]
name = "conflict-monitoring-ntl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blackmarblepy>=2025.6.3",
    "colorcet>=3.1.0",
    "folium>=0.20.0",               # for exploring GeoDataFrames
    "mapclassify>=2.10.0",          # for exploring GeoDataFrames
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "rasterio>=1.4.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
docs = [
    "mkdocs-d2-plugin>=1.6.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.19",
    "mkdocs-panzoom-plugin>=0.4.2",
    "mkdocstrings[python]>=0.30.0",
]

[tool.basedpyright]
typeCheckingMode = "off"
