[project]
name = "conflict-monitoring-ntl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blackmarblepy>=2025.6.3",
    "colorcet>=3.1.0",
    "folium>=0.20.0", # for exploring GeoDataFrames
    "mapclassify>=2.10.0", # for exploring GeoDataFrames
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "rasterio>=1.4.3",
    "shapely==2.1.1",
    "fiona==1.10.1",
    "bokeh>=3.8.0",
    "holoviews>=1.21.0",
    "geoviews>=1.14.1",
    "datashader>=0.18.2",
    "geemap>=0.36.4",
    "xee>=0.0.22",
    "leafmap>=0.53.4",
    "hvplot>=0.12.1",
    "osmnx>=2.0.6",
    "pygadm>=0.5.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
docs = [
    "mkdocs-d2-plugin>=1.6.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material>=9.6.19",
    "mkdocs-panzoom-plugin>=0.4.2",
    "mkdocstrings[python]>=0.30.0",
]

[tool.uv]
package = true

[tool.basedpyright]
typeCheckingMode = "off"
